--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ paginate = 20
 pygmentsStyle = "b2"
 pygmentsCodeFences = true
 pygmentsCodeFencesGuessSyntax = true
+googleAnalytics = "UA-109464939-1"
 # disqusShortname = "yourdiscussshortname"
 
 [params]
